data/derived/sp14/progs/unify/prog0362.ml.out
Characters 29-30:
  let _ = eval (Sine(VarX),0.5,0);;
                               ^
Error: This expression has type int but an expression was expected of type
         float
